bitwarden/network-policy-bitwarden-allow-postgres-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bitwarden-allow-postgres-egress
  namespace: bitwarden
spec:
  podSelector:
    matchLabels:
      service: bitwarden
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: bitwarden-postgres
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
      ports:
        - protocol: TCP
          port: 5432
